# cortex

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  installation_history.py  pyproject.toml  test_parallel_llm.py
.github/: cla-signers.json
.github/workflows/: ci.yml  cx-build.yml  cx-release.yml  cx-test.yml  gen_centos9.yml  gen_centos9_continuous.yml  gen_centos9_tag.yml  gen_debian11.yml  gen_debian11_continuous.yml  gen_debian11_tag.yml  gen_debian12.yml  gen_debian12_continuous.yml  gen_debian12_tag.yml  gen_fedora39.yml  gen_fedora39_continuous.yml  gen_fedora39_tag.yml  gen_fedora40.yml  gen_fedora40_continuous.yml  gen_fedora40_tag.yml  gen_fedora41.yml  gen_fedora41_continuous.yml  gen_fedora41_tag.yml  gen_macos.yml  gen_macos_continuous.yml  gen_macos_tag.yml  gen_ubuntu20.04.yml  gen_ubuntu20.04_continuous.yml  gen_ubuntu20.04_tag.yml  gen_ubuntu22.04.yml  gen_ubuntu22.04_continuous.yml  gen_ubuntu22.04_tag.yml  gen_ubuntu24.04.yml  gen_ubuntu24.04_continuous.yml  gen_ubuntu24.04_tag.yml  gen_windows.yml  gen_windows_continuous.yml  gen_windows_tag.yml  nix-update-flake.yml  nix.yml  nix_continuous.yml  (+4 more)
assets/: cortex-terminal.desktop  cx-terminal.desktop
assets/macos/CX Terminal.app/Contents/: Info.plist
config/src/: config.rs  font.rs  scheme_data.rs
cortex/: cli.py  config_manager.py  env_loader.py  first_run_wizard.py  llm_router.py
cortex/sandbox/: sandbox_example.py  sandbox_executor.py
cortex/utils/: api_key_test.py  api_key_validator.py
docs/: INSTALL.md  INTEGRATIONS.md  PROJECT_SCOPE.md
examples/: cx.lua  env_demo.py  parallel_llm_demo.py
mux/src/: ssh_agent.rs
scripts/: demo_script.sh  resolve_issue_mismatch.md
src/: sandbox_executor.py
test/: test_installation_history.py
tests/: test_cli.py  test_cli_extended.py  test_daemon_commands.py  test_env_manager.py  test_first_run_wizard.py  test_llm_router.py  test_user_preferences.py
tests/installer/: test_parallel_install.py
wezterm/: Cargo.toml
wezterm-gui/: Cargo.toml
wezterm-gui/src/: commands.rs  main.rs  shapecache.rs  update.rs
wezterm-gui/src/subscription/: license.rs  tier.rs
wezterm-gui/src/termwindow/: mod.rs
wezterm-gui/src/termwindow/render/: window_buttons.rs
wezterm-gui/src/termwindow/telemetry/: data.rs  mod.rs  panel.rs
wezterm-input-types/src/: lib.rs
wezterm/src/cli/: ask.rs  ask_patterns.rs  mod.rs  new.rs  shortcuts.rs  snapshot.rs
